--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
 #male-rap, #female-rap, #male-pop, #female-pop, #male-classical, #female-classical {
   display: none;
 }
+body {
+  background-color: lightblue;
+}
+
+.jumbotron {
+  background-color: grey;
+  color: white;
+
+}
